2007-03-08  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSResponder.h: Move _rFlags from here ...
	* Headers/AppKit/NSView.h: ... to here.
	* Headers/AppKit/NSWindow.h: Add views_need_display
	* Source/NSWindow.m: Use _f.views_need_display instead of _rFlags.

2007-03-08  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSImage.m (-TIFFRepresentation,
	-TIFFRepresentationUsingCompression:factor:): If there is no
	bitmap representation create one and store it. 
	Idea by Renaud Molla <renaud.molla@wanadoo.fr>.

2007-03-08  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSDocument.m
	(-fileNameFromRunningSavePanelForSaveOperation:): Add remaining
	change by Wolfgang Lux.  This corrects a potential mismatch
	between the document type and the type specified in the panel.

2007-03-08  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSTabView.h: Correct NSTabViewType enumerator to
	match values from Apple.
	* Source/NSTabView.m (-encodeWithCoder:, -initWithCoder:): Adopt
	to new enum values.

2007-03-07  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPrintPanel.m: The modal loop which displays the print
	panel is now left with either NSOKButton or NSCancelButton
	(cf. the documentation of NSPrintPanel's -runModal: and
	-beginSheetWithPrintInfo:modalForWindow:delegate:didEndSelector:contextInfo:).
	* Source/NSPrintOperation.m: The callback passed to the print
	panel's beginSheet... method had a wrong signature (and also was
	misspelled). In addition, the code of the callback did retrieve
	its own callback from the print dictionary in a wrong way (was
	asking for a pointer to a selector while a selector was saved).
	* Source/NSDocument.m: The callback of
	-runModalPrintOperation:delegate:didRunSelector:contextInfo:
	method has a different signature than the one passed to the print
	operation's
	-runOperationModalForWindow:delegate:didRunSelector:contextInfo:
	method. This means NSDocument needs some adapter code and also has